Adding -Wpattern-signature-binds (#23291)
Was introduced one new warning option: -Wpattern-signature-binds
It warns when pattern signature binds into scope new type variable. For
example:

    f (a :: t) = ...

--- a/docs/users_guide/9.8.1-notes.rst
+++ b/docs/users_guide/9.8.1-notes.rst
@@ -30,6 +30,9 @@ Compiler
 - Added a new warning :ghc-flag:`-Wterm-variable-capture` that helps to make code compatible with
   the future extension ``RequiredTypeArguments``.
 
+- Added a new warning :ghc-flag:`-Wpattern-signature-binds` which alerts the user when they bind
+  a new type variable in a pattern signature.
+
 - Rewrite rules now support a limited form of higher order matching when a
   pattern variable is applied to distinct locally bound variables. For example: ::
 
