--- a/docs/users_guide/9.8.1-notes.rst
+++ b/docs/users_guide/9.8.1-notes.rst
@@ -197,6 +197,11 @@ Compiler
   but instead being able to warn the user that a change in the library interface
   will occur in the future.
 
+- Guard polymorphic specialisation behind the flag :ghc-flag:`-fpolymorphic-specialisation`.
+  This optimisation has led to a number of incorrect runtime result bugs, so we are disabling it
+  by default for now whilst we consider more carefully an appropiate fix.
+  (See :ghc-ticket:`23469`, :ghc-ticket:`23109`, :ghc-ticket:`21229`, :ghc-ticket:`23445`)
+
 GHCi
 ~~~~
 
