--- a/docs/users_guide/9.10.1-notes.rst
+++ b/docs/users_guide/9.10.1-notes.rst
@@ -139,6 +139,8 @@ Runtime system
   In one real-world application, this has reduced resident set size by about 20% and modestly improved run-time.
   See :ghc-ticket:`23340`.
   :rts-flag:`--nonmoving-dense-allocator-count=⟨count⟩` has been added to fine-tune this behaviour.
+- Add support for heap profiling with the non-moving GC.
+  See :ghc-ticket:`22221`.
 
 ``base`` library
 ~~~~~~~~~~~~~~~~
