Allow per constructor refinement of distinct-constructor-tables
Introduce `-fno-distinct-constructor-tables`. A distinct constructor table
configuration is built from the combination of flags given, in order. For
example, to create distinct constructor tables for all constructors except for a
specific few named `C1`,..., `CN`, pass `-fdistinct-contructor-tables` followed
by `fno-distinct-constructor-tables=C1,...,CN`. To only generate distinct
constuctor tables for a few specific constructors and no others, just pass
`-fdistinct-constructor-tables=C1,...,CN`.

The various configuations of these flags is included in the dynflags
fingerprints, which should result in the expected recompilation logic.

Adds a test that checks for distinct tables for various given or omitted
constructors.

Updates CountDepsAst and CountDepsParser tests to account for new dependencies.

Fixes #23703

--- a/docs/users_guide/9.10.1-notes.rst
+++ b/docs/users_guide/9.10.1-notes.rst
@@ -54,6 +54,18 @@ Compiler
 - Defaulting plugins can now propose solutions to entangled sets of type variables. This allows defaulting
   of multi-parameter type classes. See :ghc-ticket:`23832`.
 
+- The :ghc-flag:`-fdistinct-constructor-tables
+  <-fdistinct-constructor-tables=⟨cs⟩>` flag may now be provided with a list of
+  constructor names for which distinct info tables should be generated. This
+  avoids the default behavior of generating a distinct info table for *every*
+  usage of *every* constructor, which often results in more information than is
+  desired and significantly increases the size of executables.
+
+- The :ghc-flag:`-fno-distinct-constructor-tables
+  <-fno-distinct-constructor-tables=⟨cs⟩>` flag is introduced, which allows
+  users to refine the set of constructors for which distinct info tables should
+  be generated.
+
 GHCi
 ~~~~
 
